--- a/portfolio/digital-paper.html
+++ b/portfolio/digital-paper.html
@@ -16,31 +16,41 @@
     </div>
 
     <div class="back-container">
-        <a href="index.php#port">Retour</a>
+        <a class="btn-acc" href="index.php#port">
+            <img height="80" width="80" src="res/img/Wax_Seal_fleche_retour.avif">
+        </a>
     </div>
+
+
+
+    
 
     <div class="gallery-container">
         <div class="gallery-first-row">
-            <img height="450" width="355" src="res/digital-paper/Купало_-_Base.avif">
-            <img height="450" width="355" src="res/digital-paper/Back-Off-Bitch-Base.avif">
-            <img height="450" width="355" src="res/digital-paper/Одна-Base.avif">
+            <img class="thumbnail" height="450" width="355" src="res/digital-paper/Купало_-_Base.avif">
+            <img class="thumbnail" height="450" width="355" src="res/digital-paper/Back-Off-Bitch-Base.avif">
+            <img class="thumbnail" height="450" width="355" src="res/digital-paper/Одна-Base.avif">
         </div>
 
         <div class="gallery-second-row">
-            <img height="450" width="355" src="res/digital-paper/Glücksritter.avif">
-            <img height="450" width="355" src="res/digital-paper/Nemesis-Divina-Base.avif">
-            <img height="450" width="355" src="res/digital-paper/Maisema-Base.avif">
+            <img class="thumbnail" height="450" width="355" src="res/digital-paper/Glücksritter.avif">
+            <img class="thumbnail" height="450" width="355" src="res/digital-paper/Nemesis-Divina-Base.avif">
+            <img class="thumbnail" height="450" width="355" src="res/digital-paper/Maisema-Base.avif">
         </div>
 
         <div class="gallery-third-row">
-            <img height="450" width="355" src="res/digital-paper/De-Mysteriis-Dom-Sathanas-Base.avif">
-            <img height="450" width="355" src="res/digital-paper/Dark-Endless-Base.avif">
-            <img height="450" width="355" src="res/digital-paper/Mother-Earth-Base.avif">
+            <img class="thumbnail" height="450" width="355" src="res/digital-paper/De-Mysteriis-Dom-Sathanas-Base.avif">
+            <img class="thumbnail" height="450" width="355" src="res/digital-paper/Dark-Endless-Base.avif">
+            <img class="thumbnail" height="450" width="355" src="res/digital-paper/Mother-Earth-Base.avif">
         </div>
 
         <div class="gallery-fourth-row">
-            <img height="450" width="355" src="res/digital-paper/Sanaton-Maa-Portrait-Base.avif">
+            <img class="thumbnail" height="450" width="355" src="res/digital-paper/Sanaton-Maa-Portrait-Base.avif">
         </div>
+        <div id="myModal" class="modal">
+            <img class="modal-content" id="img01">
+            <div id="caption"></div>
+        </div> 
     </div>
 
     <footer>
@@ -53,7 +63,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js"></script>
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <script src="app.js"></script>
-    
+    <script src="images.js"></script>
 </body>
 </html>
 
